--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.StepCounter"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".InfoReco"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
