--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StepCounter"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity android:name=".Register" />
         <activity android:name=".Menu" />
